--- a/business-visa.html
+++ b/business-visa.html
@@ -140,7 +140,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            
+
                                             <a href="work-visa.html" class="dropdown-item">Work Visa</a>
                                             <a href="business-visa.html" class="dropdown-item active">Business Visa</a>
                                             <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
@@ -211,23 +211,60 @@
                             culture, language, safety, and visa requirements, as well as the academic program and cost.
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <h2 class="mb-4">What Is a Business Visa?</h2>
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/business.jpg" alt="Image">
+                        <p>A business visa is an essential travel authorization issued by national governments.
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <p>It is crucial for foreign business travelers looking to visit other countries to explore
+                            commercial opportunities, attend events, or to collaborate with local businesses.</p>
+                        <p>Knowing when and how to use a business visa is critical to ensure you can travel legally and
+                            securely to another country for commercial purposes. Find out below what functions these
+                            documents can be used to do and how they are acquired.</p><br><br><br><br><br><br>
+
+                        <h2 class="mb-4">Business Visa Definition</h2>
+                        <p>A business visa is a travel authorization that allows an entrepreneur or company employees to
+                            visit a foreign country temporarily for business purposes.</p>
+                        <p>Under this kind of visa they may perform business activities that don’t constitute work or
+                            employment in the country of issue whilst visiting.</p>
+                        <p>It does not give holders the right to work full time in the country that issued the visa. If
+                            however, they instead wish to seek out full employment abroad they will need to apply for a
+                            work permit from the nation that they intend to reside in.</p>
+
+                        <h2 class="mb-4">What Can a Business Visa Be Used For?</h2>
+                        <p>Most business visas allow travelers to enter the country they wish to go to, stay for a
+                            temporary period of time and conduct activities and transactions whilst visiting.</p>
+                        <p>Business visa can be used to attend events such as company meetings or conferences held
+                            overseas.</p>
+                        <p>They can also be used for visitors wishing to investigate opportunities and business ventures
+                            in a foreign country. In some countries, they may also set up temporary offices or handle
+                            other logistical tasks under a business visa.</p>
+
+                        <h2 class="mb-4">How to get a Business Visa</h2>
+                        <p>Each country has its own rules and regulations for issuing business visas.</p>
+                        <p>Some countries require online visas and visa waivers for business travelers or allow visitors
+                            to enter for a short period of time visa-free for business purposes.</p>
+                        <p>Other countries, however, require applicants to register formally at a national embassy or
+                            consulate for a business visa before traveling.</p>
+                        <p>Therefore, it is essential to check the requirements for the country you intend to visit
+                            before making your final arrangements to travel with a business visa.</p>
+
+                        <h2 class="mb-4">Documents Required For a Business Visa</h2>
+                        <p>In order to apply for a business visa you must provide evidence of the purpose of your trip.
+                            This is important to prove that you are eligible for the visa required by your destination
+                            for business travelers.</p>
+                        <p>Most countries require applicants to provide the following documents for a business visa:</p>
+                        <ul>
+                            <li>A completed business visa application form</li>
+                            <li>A valid passport with 6 months validity remaining</li>
+                            <li>Travel itinerary detailing flight and accommodation details</li>
+                            <li>Professional credentials</li>
+                            <li>Academic credentials</li>
+                            <li>Proof of sufficient funds for your trip</li>
+                            <li>Evidence of adequate insurance coverage</li>
+                        </ul>
+
+
+
                     </div>
 
                     <!-- Comment List -->
@@ -391,7 +428,7 @@
                 </div>
                 <!-- Team Start -->
                 <div class="container-fluid py-5">
-                    <div class="container pt-5 pb-3">
+                    <!-- <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
                             <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
                             <h1>Training Courses</h1>
@@ -403,7 +440,7 @@
                                         <img class="img-fluid" src="img/training/training-1.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
-                                                role="button">More Details</a>
+                                                role="button">More Details</a> -->
                                             <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
@@ -411,11 +448,11 @@
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
-                                        <!-- <p class="m-0">Stock Market</p> -->
+                                        <h5 class="m-0">Stock Market</h5> -->
+                                        <!-- <p class="m-0">Stock Market</p>
                                     </div>
                                 </div>
                             </div>
@@ -425,7 +462,7 @@
                                         <img class="img-fluid" src="img/training/training-2.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
+                                                role="button">More Details</a> -->
                                             <!-- <button class="btn btn-outline-light mx-1"></button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
@@ -433,14 +470,14 @@
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
+                                        <h5 class="m-0">Software Training</h5> -->
                                         <!-- <p class="m-0">Software Training</p> -->
-                                    </div>
+                                    <!-- </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
