--- a/study-in-ireland.html
+++ b/study-in-ireland.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-ireland" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Ireland</h3>
@@ -153,7 +153,8 @@
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study_in_Ireland.jpg" alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study_in_Ireland.jpg"
+                            alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
@@ -163,23 +164,74 @@
                             culture, language, safety, and visa requirements, as well as the academic program and cost.
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
+                        <h2 class="mb-4">Study in Ireland</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <p>An island in the North Atlantic, Ireland is separated from Great Britain by the North
+                            Channel. Each year, the Irish government invests €728 million in higher education
+                            institutions. This allows Ireland to have one of the best higher education systems in the
+                            world. University in Ireland would be a great choice for any international
+                            student.<br><br><br><br><br><br><br><br><br><br><br><br>
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <h2 class="mb-4">Why study in Ireland</h2>
+                        <p>With many internationally ranked institutions, Ireland is a popular choice for students
+                            from around the world. The country has been consistently acknowledged as a safe and
+                            peaceful city in world rankings, which is complemented by the welcoming nature of the
+                            Irish people.</p>
+                        <p>Higher education is provided by different types of institutions. These are universities,
+                            colleges of education and institutes of technology. All of the Irish universities are
+                            public and therefore state-funded. Five of Ireland’s universities are in the 2023 QS
+                            World University Rankings top 500. The highest ranked of these is Trinity College Dublin
+                            – University of Dublin, which is placed at 98th. The next highest ranked is the
+                            University College Dublin, which is placed at =181st.</p>
+                        <p>The academic year observed in Ireland is similar to other European countries, and
+                            generally runs from September through to June/July depending on the examination period.
+                            There are courses offered at the traditional levels of study. These include bachelors,
+                            masters and doctoral, as well as diplomas and other types.
+
+                        </p>
+
+                        <h2 class="mb-4">About Ireland</h2>
+                        <p>Located to the west of Great Britain and east of Canada and the USA, Ireland is an island
+                            nation with a population of over 6.5 million people. This makes it the second most populous
+                            island in Europe. Whilst Ireland is one single piece of land, it is politically divided into
+                            two areas. These are the Republic of Ireland (referred to sometimes as just Ireland) and
+                            Northern Ireland, which is part of the United Kingdom. This division came after many
+                            disagreements and is still a topic of political conversation today. Despite the scarring
+                            still seen across Ireland, both parts are beautiful and welcoming.</p>
+                        <p>Human presence in Ireland dates back over 12,500 years ago to 10,500 BCE. Since then, there
+                            has been a constant battle over who rules the island. Located in Ireland are three UNESCO
+                            World Heritage Sites, including the Giant’s Causeway. Dublin is the most heavily touristy
+                            area and has many attractions, such as Book of Kells and the Guinness Storehouse.</p>
+                        <p>The culture in Ireland is heavily influenced by religion and the Gaelic and Celtic history.
+                            Religion has played a significant role in the history of Ireland, and has caused many
+                            disagreements. Famously, Northern Ireland and the Republic of Ireland have different
+                            majority religions; Protestant and Catholic. Since the 20th century, you can find influences
+                            of Irish culture worldwide, including Irish pubs and food.</p>
+
+                        <h2 class="mb-4">Costs of studying and living in Ireland</h2>
+                        <p>Ireland uses the Euro (€) as its currency.</p>
+                        <p>The tuition fees you will pay in Ireland will vary depending on where you choose to study and
+                            where you are from. Ireland operates a Free Fees Initiative for full-time undergraduate
+                            study. If you are an EU student studying at a public university, you will not pay tuition
+                            fees. If you are an EU student not studying at a public university or studying a
+                            postgraduate programme, you will have to pay fees. Even if you are not required to pay
+                            tuition fees, you will likely have to pay a registration fee of around €3,000. If you are
+                            from anywhere else in the world, you will need to pay fees no matter what level of study you
+                            are taking and where you are studying. On average you should expect to pay between €5,000
+                            and €10,000 per year. You may be eligible for a scholarship to help finance your studies,
+                            check with your chosen institution for information.</p>
+                        <p>In terms of living costs, Ireland is very similar to other European countries. If you choose
+                            to live in a bigger city, you will pay more than smaller cities and towns. On average, it is
+                            recommended that you budget for between €500 and €800 per month. This accounts for
+                            accommodation, groceries and travel. Another cost that students need to consider is health
+                            insurance. If you are an EHIC card holder, you will be able to access any healthcare you
+                            require for free. If you are not an EHIC card holder, you will need to ensure you have valid
+                            health insurance. If you already have a policy in your home country, you will need to make
+                            sure it is valid in Ireland. If you do not have insurance already, you will need to purchase
+                            a policy that will cover you for the duration of your studies. If you require guidance about
+                            health insurance, contact your institution.</p>
+
+
                     </div>
 
                     <!-- Comment List -->
@@ -253,7 +305,8 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In Singapore</a>
+                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Singapore</a>
                                 <!-- <span class="badge badge-primary badge-pill">150</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
@@ -342,7 +395,7 @@
                     </div>
                 </div>
                 <!-- Team Start -->
-                <div class="container-fluid py-5">
+                <!-- <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
                             <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
@@ -427,7 +480,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Team End -->
             </div>
         </div>
