--- a/visit-visa.html
+++ b/visit-visa.html
@@ -140,7 +140,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            
+
                                             <a href="work-visa.html" class="dropdown-item">Work Visa</a>
                                             <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                             <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
@@ -211,23 +211,48 @@
                             culture, language, safety, and visa requirements, as well as the academic program and cost.
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <h2 class="mb-4">What Is a Tourist Visa?</h2>
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/tourist.jpg" alt="Image">
+                        <p>A tourist visa is the most common type of travel permit. Passengers visiting another country
+                            often need a tourist visa to enter.
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <p>Many countries issue different visas for different purposes and some issue visas exclusively
+                            for tourism.</p>
+                        <p>Others have visas that permit tourism as well as other activities.</p>
+                        <p>Any of these types of visa can be considered a tourist visa.</p>
+                        <p>t is worth noting that there are also other types of travel authorization that permit
+                            tourism, but these are not necessarily the same as a visa.</p><br><br><br>
+
+                        <h2 class="mb-4">Tourist Visa Definition</h2>
+                        <p>A tourist visa is an official document or stamp that authorizes an individual to enter a
+                            foreign country for the purpose of leisure and tourism.</p>
+                        <p>Depending on the country, they may also be referred to as “travel visas”, “visitor visas”, or
+                            “temporary stay visas”.</p>
+                        <p>Tourist visas typically allow the holder to stay in the host country for a short period. This
+                            can range from several days to several months.</p>
+                        <p>During the stay, tourist visa holders are not allowed to work or engage in non-tourist
+                            activities.</p>
+                        <p>In some cases, a short-stay visa for a particular country may permit multiple purposes in
+                            addition to tourism, such as business.</p>
+
+                        <h2 class="mb-4">How to Get a Tourist Visa</h2>
+                        <p>Many nations have now made it possible to apply for a tourist visa online. This is the
+                            quickest and most straightforward way to obtain one.</p>
+                        <p>Travelers simply fill in a form using a computer or mobile device and submit the required
+                            information and supporting documents in a digital format. This makes it possible to complete
+                            a tourist visa application from one’s own home, office, or anywhere else with an internet
+                            connection.</p>
+                        <p>Every country has its own visa policy. This outlines the rules for which foreign nationals
+                            must have a tourist visa to enter and the requirements for applying.</p>
+                        <p>In some cases, citizens of some countries may not be able to apply for a tourist visa online.
+                            In this situation, it is usually necessary to go to an embassy or consulate to apply in
+                            person.</p>
+                        <p>Many sovereign states also have a list of visa-exempt nationalities who may visit for a
+                            certain length of time without having to apply for a tourist visa.</p>
+                        <p>To take advantage of this visa exemption, it may be necessary to register online to obtain a
+                            waiver or travel authorization. These are not technically visas, but the application process
+                            is usually similar to electronic visas (e-Visas). They may also permit visits for other
+                            purposes, such as business or to receive medical treatment.</p>
                     </div>
 
                     <!-- Comment List -->
@@ -390,7 +415,7 @@
                     </div>
                 </div>
                 <!-- Team Start -->
-                <div class="container-fluid py-5">
+                <!-- <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
                             <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
@@ -403,7 +428,7 @@
                                         <img class="img-fluid" src="img/training/training-1.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
-                                                role="button">More Details</a>
+                                                role="button">More Details</a> -->
                                             <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
@@ -411,12 +436,12 @@
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
+                                        <h5 class="m-0">Stock Market</h5> -->
                                         <!-- <p class="m-0">Stock Market</p> -->
-                                    </div>
+                                    <!-- </div>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
@@ -425,7 +450,7 @@
                                         <img class="img-fluid" src="img/training/training-2.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
+                                                role="button">More Details</a> -->
                                             <!-- <button class="btn btn-outline-light mx-1"></button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
@@ -433,14 +458,14 @@
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
+                                        <h5 class="m-0">Software Training</h5> -->
                                         <!-- <p class="m-0">Software Training</p> -->
-                                    </div>
+                                    <!-- </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
