--- a/work-visa.html
+++ b/work-visa.html
@@ -140,7 +140,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            
+
                                             <a href="work-visa.html" class="dropdown-item active">Work Visa</a>
                                             <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                             <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
@@ -211,23 +211,57 @@
                             culture, language, safety, and visa requirements, as well as the academic program and cost.
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <h2 class="mb-4">About Work Visa.</h2>
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/work visa.jpg" alt="Image">
+                        <p>Work visas are permits that allow individuals to travel to another country to work there.
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <p>In most cases, a work visa or permit is mandatory to accept employment in a foreign state.
+                            There are some exceptions, such as in blocs of countries with a policy of freedom of
+                            movement (like the EU)..</p>
+                        <p>Work visas are usually temporary, but may be renewed. Some countries issue permanent work
+                            permits or allow holders to change to a residence visa after a certain period of time.</p>
+                        <p>Various countries have a different system in which foreign nationals must first apply for a
+                            long-stay visa and then obtain a work permit once they arrive in the country.</p>
+
+                        <h2 class="mb-4">Work Visa Definition</h2>
+                        <p>A work visa is a type of visa that grants the holder authorization to accept employment in a
+                            foreign country. It may be issued as a stamp in the passport or as a separate document.</p>
+                        <p>It is needed to enter the country for the purpose of performing paid work.</p>
+                        <p>Work visas may also be needed for volunteering and unpaid internships.</p>
+                        <p>The rules regarding work visas vary depending on the country of issue.</p>
+
+                        <h2 class="mb-4">Terms of Work Visas</h2>
+                        <p>In some cases, work visas are highly specific and are granted for a particular job. Under the
+                            terms, the holder might not be able to take any other job in the same country apart from the
+                            one authorized by the visa.</p>
+                        <p>In these cases, the prospective employer based in the destination country usually has to
+                            sponsor the visa application and send a cover letter.</p>
+                        <p>Some countries issue more general work visas that permit the holder to take any job in the
+                            country and work for the duration of the visa’s period of validity.</p>
+
+                        <h2 class="mb-4">How to Get a Work Visa</h2>
+                        <p>Generally, applicants need a job offer to apply for a work visa.</p>
+                        <p>In most cases, work visas can only be obtained by applying at a diplomatic mission (embassy
+                            or consulate) or other official offices belonging to the destination country.</p>
+                        <p>The application must usually be submitted in person, along with all the necessary supporting
+                            documents.</p>
+                        <P>It may be necessary to make an appointment beforehand.</P>
+                        <p>A small number of countries have made it possible to obtain an electronic work visa through
+                            an online visa system, which makes the whole process quicker and easier. Examples include
+                            New Zealand and Canada.</p>
+                        <p>These applications can be submitted using any computer or device connected to the internet.
+                            This means that traveling to an embassy or consulate may not be necessary. However, the
+                            traveler may still have to go to a center to have their biometrics taken (as is the case
+                            with Canada).</p>
+                            <p>Supporting documentation for a work visa application usually includes:</p>
+                            <ul>
+                                <li>Letters from previous employers</li>
+                                <li>Letter from the prospective employer in the destination country</li>
+                                <li>Qualifications</li>
+                                <li>Signed contract (if applicable)</li>
+                            </ul>
+
+
                     </div>
 
                     <!-- Comment List -->
@@ -390,7 +424,7 @@
                     </div>
                 </div>
                 <!-- Team Start -->
-                <div class="container-fluid py-5">
+                <!-- <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
                             <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
@@ -404,19 +438,19 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
                                                 role="button">More Details</a>
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
+                                            <button class=" btn btn-outline-light mx-1">More Details</button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
-                                    </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
+                                        <!-- </div>
+                                    </div> -->
+                                    <!-- <div class="bg-secondary p-4">
+                                        <h5 class="m-0">Stock Market</h5> -->
                                         <!-- <p class="m-0">Stock Market</p> -->
-                                    </div>
+                                    <!-- </div>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
@@ -425,7 +459,7 @@
                                         <img class="img-fluid" src="img/training/training-2.jpg" alt="">
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
+                                                role="button">More Details</a> -->
                                             <!-- <button class="btn btn-outline-light mx-1"></button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
@@ -433,14 +467,14 @@
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
+                                        <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
+                                        <h5 class="m-0">Software Training</h5> -->
                                         <!-- <p class="m-0">Software Training</p> -->
-                                    </div>
+                                    <!-- </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
