--- a/education.html
+++ b/education.html
@@ -347,7 +347,7 @@
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
                             <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
-                            <h1>Meet Our clients</h1>
+                            <h1>Study In Abroad</h1>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
